--- a/2.0/Source code/Elysium.Test/MainWindow.xaml
+++ b/2.0/Source code/Elysium.Test/MainWindow.xaml
@@ -557,6 +557,7 @@
                             <MenuItem Header="Always use Elysium"
                                       IsCheckable="True"
                                       IsChecked="True"/>
+                            <Separator/>
                             <MenuItem Header="Copy">
                                 <MenuItem.Icon>
                                     <Path Data="{StaticResource SampleIcon16px}"
