- Fixed bug #1443 - Fixed issue #1495 - Updates ReSharper settings

--- a/2.0/Source code/.NET Framework 4.5/Elysium/Themes/Generic.tt
+++ b/2.0/Source code/.NET Framework 4.5/Elysium/Themes/Generic.tt
@@ -77,9 +77,8 @@
         };
 
     var mergedDictionaries = XName.Get("ResourceDictionary.MergedDictionaries", @"http://schemas.microsoft.com/winfx/2006/xaml/presentation");
-    foreach (var dictionarySource in dictionarySources)
+    foreach (var dictionary in dictionarySources.Select(dictionarySource => XDocument.Load(Path.Combine(root, dictionarySource))))
     {
-        var dictionary = XDocument.Load(Path.Combine(root, dictionarySource));
         genericDictionary.Root.Add(dictionary.Root.Elements().Where(element => element.Name != mergedDictionaries));
     }
 
