--- a/2.0/Source code/.NET Framework 4/Elysium/Themes/Windows/Window.xaml
+++ b/2.0/Source code/.NET Framework 4/Elysium/Themes/Windows/Window.xaml
@@ -137,6 +137,7 @@
                                         <Path Data="{StaticResource MinimizeIcon}"
                                               Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
+                                              RenderOptions.EdgeMode="Aliased"
                                               Width="10" Height="10"/>
                                     </Button>
                                     <Button x:Name="PART_Maximize"
@@ -148,6 +149,7 @@
                                         <Path Data="{StaticResource MaximizeIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
+                                              RenderOptions.EdgeMode="Aliased"
                                               Width="10" Height="10"/>
                                     </Button>
                                     <Button x:Name="PART_Restore"
@@ -160,6 +162,7 @@
                                         <Path Data="{StaticResource RestoreIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
+                                              RenderOptions.EdgeMode="Aliased"
                                               Width="10" Height="10"/>
                                     </Button>
                                     <Button x:Name="PART_Close"
@@ -171,6 +174,7 @@
                                         <Path Data="{StaticResource CloseIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
+                                              RenderOptions.EdgeMode="Aliased"
                                               Width="10" Height="10"/>
                                     </Button>
                                 </Grid>
