--- a/2.0/Source code/SDK/MSI/ItemTemplates/Visual Studio 2010/CSharp/1033/.NET Framework 4/ElysiumWindow.tt
+++ b/2.0/Source code/SDK/MSI/ItemTemplates/Visual Studio 2010/CSharp/1033/.NET Framework 4/ElysiumWindow.tt
@@ -1,9 +1,7 @@
 ﻿<#@ template language="C#" hostSpecific="true" debug="true" #>
 <#@ output extension=".vstemplate" #>
-<#@ assembly Name="System.Core" #>
 <#@ include file="..\..\..\..\..\..\..\Include\Security.ttinclude" #>
-<#@ include file="..\..\..\..\..\..\..\Include\Versions.ttinclude" #>
-<?xml version="1.0" encoding="utf-8"?>
+<#@ include file="..\..\..\..\..\..\..\Include\Versions.ttinclude" #><?xml version="1.0" encoding="utf-8"?>
 <VSTemplate Version="3.0.0" Type="Item" xmlns="http://schemas.microsoft.com/developer/vstemplate/2005" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://schemas.microsoft.com/developer/vstemplate/2005">
   <TemplateData>
     <Name>Metro Window</Name>
