Elysium 2.0: - Fixed bug 1515 - Fixed issue 1508 Elysium 2.1: - Changeset still broken

--- a/2.0/Source code/SDK/MSI/ItemTemplates/Visual Studio 2012/CSharp/1049/.NET Framework 4.5/ElysiumWindow.tt
+++ b/2.0/Source code/SDK/MSI/ItemTemplates/Visual Studio 2012/CSharp/1049/.NET Framework 4.5/ElysiumWindow.tt
@@ -2,8 +2,7 @@
 <#@ output extension=".vstemplate" #>
 <#@ assembly Name="System.Core" #>
 <#@ include file="..\..\..\..\..\..\..\Include\Security.ttinclude" #>
-<#@ include file="..\..\..\..\..\..\..\Include\Versions.ttinclude" #>
-<?xml version="1.0" encoding="utf-8"?>
+<#@ include file="..\..\..\..\..\..\..\Include\Versions.ttinclude" #><?xml version="1.0" encoding="utf-8"?>
 <VSTemplate Version="3.0.0" Type="Item" xmlns="http://schemas.microsoft.com/developer/vstemplate/2005" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://schemas.microsoft.com/developer/vstemplate/2005">
   <TemplateData>
     <Name>Окно в стиле Metro (WPF)</Name>
