--- a/2.0/Source code/Elysium/Themes/Ranges/ProgressRing.xaml
+++ b/2.0/Source code/Elysium/Themes/Ranges/ProgressRing.xaml
@@ -15,6 +15,8 @@
         <Setter Property="Foreground" Value="{StaticResource AccentBrush}"/>        
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
+        <Setter Property="MinWidth" Value="8px"/>
+        <Setter Property="MinHeight" Value="8px"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
