Elysium 2.0: - Changed version to SP4 - Changed culture en-us to en & ru-ru to ru Elysium 2.1: - Changeset is still broken

--- a/2.0/Source code/Elysium.Design/Properties/AssemblyInfo.tt
+++ b/2.0/Source code/Elysium.Design/Properties/AssemblyInfo.tt
@@ -27,7 +27,7 @@ using Microsoft.Windows.Design.Metadata;
 
 [assembly: ThemeInfo(ResourceDictionaryLocation.None, ResourceDictionaryLocation.SourceAssembly)]
 
-[assembly: NeutralResourcesLanguage("en-us")]
+[assembly: NeutralResourcesLanguage("en", UltimateResourceFallbackLocation.MainAssembly)]
 
 #if NETFX4
 [assembly: AssemblyVersion("<#= Versions.NETFX4.Design #>")]
