--- a/2.0/Source code/.NET Framework 4/Elysium/Themes/Generic.xaml
+++ b/2.0/Source code/.NET Framework 4/Elysium/Themes/Generic.xaml
@@ -1425,9 +1425,11 @@
         <Setter Property="MinHeight" Value="2" />
         <Setter Property="Height" Value="4" />
         <Setter Property="MaxHeight" Value="8" />
+        <Setter Property="MinWidth" Value="2" />
         <Setter Property="Template" Value="{StaticResource HorizontalProgressBarTemplate}" />
       </Trigger>
       <Trigger Property="Orientation" Value="Vertical">
+        <Setter Property="MinHeight" Value="2" />
         <Setter Property="MinWidth" Value="2" />
         <Setter Property="Width" Value="4" />
         <Setter Property="MaxWidth" Value="8" />
@@ -1442,6 +1444,8 @@
     <Setter Property="Foreground" Value="{StaticResource AccentBrush}" />
     <Setter Property="FocusVisualStyle" Value="{x:Null}" />
     <Setter Property="Focusable" Value="False" />
+    <Setter Property="MinWidth" Value="8px" />
+    <Setter Property="MinHeight" Value="8px" />
     <Setter Property="SnapsToDevicePixels" Value="True" />
     <Setter Property="Template">
       <Setter.Value>
