--- a/2.0/Source code/Elysium.Notifications/Properties/AssemblyInfo.tt
+++ b/2.0/Source code/Elysium.Notifications/Properties/AssemblyInfo.tt
@@ -20,7 +20,7 @@ using System.Security;
 [assembly: ComVisible(false)]
 [assembly: CLSCompliant(true)]
 
-[assembly: NeutralResourcesLanguage("en-us")]
+[assembly: NeutralResourcesLanguage("en", UltimateResourceFallbackLocation.MainAssembly)]
 
 #if NETFX4
 [assembly: AssemblyVersion("<#= Versions.NETFX4.Notifications #>")]
