--- a/2.0/Source code/Elysium.Test/Properties/AssemblyInfo.tt
+++ b/2.0/Source code/Elysium.Test/Properties/AssemblyInfo.tt
@@ -20,7 +20,7 @@ using System.Windows;
 
 [assembly: ThemeInfo(ResourceDictionaryLocation.None, ResourceDictionaryLocation.SourceAssembly)]
 
-[assembly: NeutralResourcesLanguage("en-us")]
+[assembly: NeutralResourcesLanguage("en", UltimateResourceFallbackLocation.MainAssembly)]
 
 #if NETFX4
 [assembly: AssemblyVersion("<#= Versions.NETFX4.Test #>")]
